--- a/HRM_Project_framework/test-output/index.html
+++ b/HRM_Project_framework/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\mahes\AppData\Local\Temp\testng-eclipse--1633908345\testng-customsuite.xml</span>
+                    <span>C:\Users\mahes\AppData\Local\Temp\testng-eclipse--21704379\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.orangehrm.base.Base_Class" class="method navigator-link" hash-for-method="browser_launch">browser_launch</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.orangehrm.base.Base_Class" class="method navigator-link" hash-for-method="Crossbrowser_testing">Crossbrowser_testing</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,9 +126,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="browser_launch">
-                  </a> <!-- browser_launch -->
-                  <span class="method-name">browser_launch</span>
+                  <a name="Crossbrowser_testing">
+                  </a> <!-- Crossbrowser_testing -->
+                  <span class="method-name">Crossbrowser_testing</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\mahes\AppData\Local\Temp\testng-eclipse--1633908345\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\mahes\AppData\Local\Temp\testng-eclipse--21704379\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -187,14 +187,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'browser_launch')
+data.setCell(0, 1, 'Crossbrowser_testing')
 data.setCell(0, 2, 'com.orangehrm.base.Base_Class')
-data.setCell(0, 3, 9722);
+data.setCell(0, 3, 12386);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 9 seconds</span>
+              <span class="suite-total-time">Total running time: 12 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -221,10 +221,18 @@ return data;
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
               <div class="chronological-class-name">com.orangehrm.base.Base_Class</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">browser_launch</span>
+              <div class="configuration-suite before">
+                <span class="method-name">setup</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- configuration-suite before -->
+              <div class="test-method">
+                <span class="method-name">Crossbrowser_testing</span>
+                <span class="method-start">84 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-suite after">
+                <span class="method-name">closebroswer</span>
+                <span class="method-start">12559 ms</span>
+              </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
